[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kantorl"
version = "0.1.0"
description = "The MNIST of Pokemon Red for Reinforcement Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "KantoRL Contributors" }]
keywords = ["reinforcement-learning", "pokemon", "gymnasium", "ppo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyboy>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "einops>=0.6.0",
    "tensorboard>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
wandb = ["wandb"]
stream = ["websockets>=12.0"]
benchmark = ["optuna>=3.0", "pyyaml>=6.0"]
curriculum = ["sb3-contrib>=2.0.0"]

[project.scripts]
kantorl = "kantorl.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/kantorl"
Repository = "https://github.com/yourusername/kantorl"

[tool.hatch.build.targets.wheel]
packages = ["src/kantorl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
